--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 dist: xenial
 sudo: true
 
+language: python
+dist: xenial
+sudo: true
+
 python:
   - 3.7
 
@@ -13,7 +17,11 @@ env:
 install:
   - pip install pipenv
   - pipenv sync -d
+  - cp contrib/env-sample .env
 
 script:
   - pipenv run flake8 .
-  - pipenv run pytest
+  - pipenv run pytest --cov=pypro
+
+after_success:
+  - pipenv run codecov
